@@ -56,49 +56,45 @@ class TestCIFilter (TestCase):
         self.assertIsInstance(kCIApplyOptionExtent, unicode)
         self.assertIsInstance(kCIApplyOptionDefinition, unicode)
         self.assertIsInstance(kCIApplyOptionUserInfo, unicode)
+        self.assertIsInstance(kCIApplyOptionColorSpace, unicode)
 
 
-
-
-
-
-        @min_os_level('10.5')
-        def testConstants10_5(self):
-
-            self.assertIsInstance(kCIAttributeDescription, unicode)
-            self.assertIsInstance(kCIAttributeReferenceDocumentation, unicode)
-            self.assertIsInstance(kCIUIParameterSet, unicode)
-            self.assertIsInstance(kCIUISetBasic, unicode)
-            self.assertIsInstance(kCIUISetIntermediate, unicode)
-            self.assertIsInstance(kCIUISetAdvanced, unicode)
-            self.assertIsInstance(kCIUISetDevelopment, unicode)
-            self.assertIsInstance(kCIAttributeTypeInteger, unicode)
-            self.assertIsInstance(kCIAttributeTypeCount, unicode)
-            self.assertIsInstance(kCICategoryFilterGenerator, unicode)
-            self.assertIsInstance(kCIOutputImageKey, unicode)
-            self.assertIsInstance(kCIInputBackgroundImageKey, unicode)
-            self.assertIsInstance(kCIInputImageKey, unicode)
-            self.assertIsInstance(kCIInputTimeKey, unicode)
-            self.assertIsInstance(kCIInputTransformKey, unicode)
-            self.assertIsInstance(kCIInputScaleKey, unicode)
-            self.assertIsInstance(kCIInputAspectRatioKey, unicode)
-            self.assertIsInstance(kCIInputCenterKey, unicode)
-            self.assertIsInstance(kCIInputRadiusKey, unicode)
-            self.assertIsInstance(kCIInputAngleKey, unicode)
-            self.assertIsInstance(kCIInputRefractionKey, unicode)
-            self.assertIsInstance(kCIInputWidthKey, unicode)
-            self.assertIsInstance(kCIInputSharpnessKey, unicode)
-            self.assertIsInstance(kCIInputIntensityKey, unicode)
-            self.assertIsInstance(kCIInputEVKey, unicode)
-            self.assertIsInstance(kCIInputSaturationKey, unicode)
-            self.assertIsInstance(kCIInputColorKey, unicode)
-            self.assertIsInstance(kCIInputBrightnessKey, unicode)
-            self.assertIsInstance(kCIInputContrastKey, unicode)
-            self.assertIsInstance(kCIInputGradientImageKey, unicode)
-            self.assertIsInstance(kCIInputMaskImageKey, unicode)
-            self.assertIsInstance(kCIInputShadingImageKey, unicode)
-            self.assertIsInstance(kCIInputTargetImageKey, unicode)
-            self.assertIsInstance(kCIInputExtentKey, unicode)
+    @min_os_level('10.5')
+    def testConstants10_5(self):
+        self.assertIsInstance(kCIAttributeDescription, unicode)
+        self.assertIsInstance(kCIAttributeReferenceDocumentation, unicode)
+        self.assertIsInstance(kCIUIParameterSet, unicode)
+        self.assertIsInstance(kCIUISetBasic, unicode)
+        self.assertIsInstance(kCIUISetIntermediate, unicode)
+        self.assertIsInstance(kCIUISetAdvanced, unicode)
+        self.assertIsInstance(kCIUISetDevelopment, unicode)
+        self.assertIsInstance(kCIAttributeTypeInteger, unicode)
+        self.assertIsInstance(kCIAttributeTypeCount, unicode)
+        self.assertIsInstance(kCICategoryFilterGenerator, unicode)
+        self.assertIsInstance(kCIOutputImageKey, unicode)
+        self.assertIsInstance(kCIInputBackgroundImageKey, unicode)
+        self.assertIsInstance(kCIInputImageKey, unicode)
+        self.assertIsInstance(kCIInputTimeKey, unicode)
+        self.assertIsInstance(kCIInputTransformKey, unicode)
+        self.assertIsInstance(kCIInputScaleKey, unicode)
+        self.assertIsInstance(kCIInputAspectRatioKey, unicode)
+        self.assertIsInstance(kCIInputCenterKey, unicode)
+        self.assertIsInstance(kCIInputRadiusKey, unicode)
+        self.assertIsInstance(kCIInputAngleKey, unicode)
+        self.assertIsInstance(kCIInputRefractionKey, unicode)
+        self.assertIsInstance(kCIInputWidthKey, unicode)
+        self.assertIsInstance(kCIInputSharpnessKey, unicode)
+        self.assertIsInstance(kCIInputIntensityKey, unicode)
+        self.assertIsInstance(kCIInputEVKey, unicode)
+        self.assertIsInstance(kCIInputSaturationKey, unicode)
+        self.assertIsInstance(kCIInputColorKey, unicode)
+        self.assertIsInstance(kCIInputBrightnessKey, unicode)
+        self.assertIsInstance(kCIInputContrastKey, unicode)
+        self.assertIsInstance(kCIInputGradientImageKey, unicode)
+        self.assertIsInstance(kCIInputMaskImageKey, unicode)
+        self.assertIsInstance(kCIInputShadingImageKey, unicode)
+        self.assertIsInstance(kCIInputTargetImageKey, unicode)
+        self.assertIsInstance(kCIInputExtentKey, unicode)
 
     def testMethods(self):
         self.assertIsNullTerminated(CIFilter.apply_)
