@@ -13,64 +13,72 @@ VERSION="3.1b1"
 # supported OSX release.
 FRAMEWORKS_WRAPPERS=[
         # Name                      Introcuded          Removed
+        ('AVKit',                   '10.9',             None        ),
+        ('Accounts',                '10.8',             None        ),
         ('AddressBook',             None,               None        ),
         ('AppleScriptKit',          None,               None        ),
+        ('AppleScriptObjC',         '10.6',             None        ),
         ('ApplicationServices',     None,               None        ),
         ('Automator',               None,               None        ),
         ('CFNetwork',               None,               None        ),
+        ('CalendarStore',           '10.5',             None        ),
+        ('CloudKit',                '10.10',            None        ),
         ('Cocoa',                   None,               None        ),
+        ('Collaboration',           '10.5',             None        ),
+        ('Contacts',                '10.11',            None        ),
+        ('CoreBluetooth',           '10.10',            None        ),
         ('CoreData',                None,               None        ),
+        ('CoreLocation',            '10.6',             None        ),
         ('CoreText',                None,               None        ),
+        ('CoreWLAN',                '10.6',             None        ),
+        ('CryptoTokenKit',          '10.10',            None        ),
+        ('DictionaryServices',      '10.5',             None        ),
         ('DiskArbitration',         None,               None        ),
+        ('EventKit',                '10.8',             None        ),
         ('ExceptionHandling',       None,               None        ),
+        ('FSEvents',                '10.5',             None        ),
+        ('FinderSync',              '10.10',            None        ),
+        ('GameCenter',              '10.8',             None        ),
+        ('GameController',          '10.9',             None        ),
+        ('IMServicePlugIn',         '10.7',             None        ),
+        ('InputMethodKit',          '10.5',             None        ),
         ('InstallerPlugins',        None,               None        ),
+        ('InstantMessage',          '10.5',             None        ),
+        ('InterfaceBuilderKit',     '10.5',             '10.7'      ),
         ('LatentSemanticMapping',   None,               None        ),
         ('LaunchServices',          None,               None        ),
+        ('LocalAuthentication',     '10.10',            None        ),
+        ('MapKit',                  '10.9',             None        ),
+        ('MediaAccessibility',      '10.9',             None        ),
+        ('MediaLibrary',            '10.9',             None        ),
         ('Message',                 None,               '10.9'      ),
+        ('MultipeerConnectivity',   '10.10',            None        ),
+        ('NetFS',                   '10.6',             None        ),
+        ('NotificationCenter',      '10.10',            None        ),
+        ('Photos',                  '10.11',            None        ),
+        ('PhotosUI',                '10.11',            None        ),
         ('PreferencePanes',         None,               None        ),
+        ('PubSub',                  '10.5',             None        ),
+        ('QTKit',                   '10.5',             None        ),
         ('Quartz',                  None,               None        ),
         ('ScreenSaver',             None,               None        ),
+        ('ScriptingBridge',         '10.5',             None        ),
         ('SearchKit',               None,               None        ),
+        ('ServerNotification',      '10.6',             '10.9'      ),
+        ('ServiceManagement',       '10.6',             None        ),
+        ('Social',                  '10.8',             None        ),
+        ('StoreKit',                '10.7',             None        ),
         ('SyncServices',            None,               None        ),
         ('SystemConfiguration',     None,               None        ),
         ('WebKit',                  None,               None        ),
         ('XgridFoundation',         None,               '10.8'      ),
-        ('FSEvents',                '10.5',             None        ),
-        ('CalendarStore',           '10.5',             None        ),
-        ('Collaboration',           '10.5',             None        ),
-        ('DictionaryServices',      '10.5',             None        ),
-        ('InputMethodKit',          '10.5',             None        ),
-        ('InstantMessage',          '10.5',             None        ),
-        ('InterfaceBuilderKit',     '10.5',             '10.7'      ),
-        ('PubSub',                  '10.5',             None        ),
-        ('QTKit',                   '10.5',             None        ),
-        ('ScriptingBridge',         '10.5',             None        ),
-        ('AppleScriptObjC',         '10.6',             None        ),
-        ('CoreLocation',            '10.6',             None        ),
-        ('ServerNotification',      '10.6',             '10.9'      ),
-        ('ServiceManagement',       '10.6',             None        ),
-        ('CoreWLAN',                '10.6',             None        ),
-        ('StoreKit',                '10.7',             None        ),
-        ('Accounts',                '10.8',             None        ),
 #        ('AudioVideoBridging',      '10.8',             None        ),
-        ('EventKit',                '10.8',             None        ),
 #        ('GLKit',                   '10.8',             None        ),
 #        ('GameKit',                 '10.8',             None        ),
 #        ('MediaToolbox',            '10.8',             None        ),
 #        ('SceneKit',                '10.8',             None        ),
-        ('Social',                  '10.8',             None        ),
-#        ('VideoToolbox',            '10.8',             None        ),
-        ('AVKit',                   '10.9',             None        ),
-        ('CoreBluetooth',           '10.10',            None        ),
-        ('MapKit',                  '10.9',             None        ),
-        ('MediaAccessibility',      '10.9',             None        ),
-        ('MediaLibrary',            '10.9',             None        ),
 #        ('SpriteKit',               '10.9',             None        ),
-        ('GameController',          '10.9',             None        ),
-        ('CloudKit',                '10.10',            None        ),
-        ('CryptoTokenKit',          '10.10',            None        ),
-        ('FinderSync',              '10.10',            None        ),
-        ('MultipeerConnectivity',   '10.10',            None        ),
+#        ('VideoToolbox',            '10.8',             None        ),
 ]
 
 
